[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/enemySprite.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.704, 30.031 )

[node name="EnemyGreen" type="KinematicBody2D"]
position = Vector2( -0.917519, -0.352682 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
speed = 40
damage = 4
bonus_health = 0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.264501, 0.25 )
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 19, 0 )
enabled = true
cast_to = Vector2( 0, 31 )

[node name="Timer" type="Timer" parent="." groups=[
"Enemy",
]]
wait_time = 2.0
one_shot = true

[node name="PlayerHit" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerHit" to="." method="_on_PlayerHit_timeout"]
